--- a/src/css/_cards.scss
+++ b/src/css/_cards.scss
@@ -192,11 +192,13 @@
     @media screen and (max-width: 22.4375em) {
       grid-template-columns: 1fr auto 1fr;
       grid-template-areas:
-        "a image b"
+        "image image image"
         "heading heading heading"
         "stack stack links"
         "description description description";
       text-align: center;
+      padding-top: 0;
+      padding-left: 0;
       .cards__links {
         justify-content: flex-end;
       }
@@ -282,6 +284,10 @@
       max-width: 39rem;
     }
 
+    .cards__image {
+      height: auto;
+    }
+
     padding: 1em;
     max-width: 25rem;
     width: 100%;
@@ -293,7 +299,7 @@
     column-gap: 1em;
     row-gap: 0.5em;
 
-    @media screen and (min-width: 32em) {
+    @media screen and (min-width: 22.5em /* 32em */) {
       grid-template-areas:
         "image heading"
         // "image description"
@@ -306,13 +312,31 @@
     @media screen and (max-width: 22.4375em) {
       grid-template-columns: 1fr auto 1fr;
       grid-template-areas:
-        "a image b"
+        "image image image"
         "heading heading heading"
         // "description description description"
         "price price price";
       text-align: center;
+      padding-top: 0;
+      padding-left: 0;
+      padding-right: 0;
+      .cards__heading,
+      .cards__price {
+        padding-left: 1em;
+        padding-right: 1em;
+      }
+
       .cards__links {
         justify-content: flex-end;
+      }
+      .cards__image {
+        max-height: 8rem;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        picture,
+        img {
+          object-position: top;
+        }
       }
     }
   }
