--- a/src/_pages/shop.njk
+++ b/src/_pages/shop.njk
@@ -9,7 +9,8 @@ ogAlt: "null"
 ---
 
 <div class="container">
-    <div class="container--md center">
+    {# <div class="container--md center"> #}
+    <div class="container--md flex-justify-center gap-900 flex-wrap">
         <div class="constrain--lg fs-300 mt--rel flex-justify-center flex-align-center gap-900">
             <div class="flex-align-center">
                 <span class="icon flat info fs-900"></span></div>
