--- a/src/css/_clr.scss
+++ b/src/css/_clr.scss
@@ -12,6 +12,12 @@
 .clr-neutral-400 {
   color: $clr-neutral-400;
 }
+.clr-neutral-500 {
+  color: $clr-neutral-500;
+}
+.clr-neutral-600 {
+  color: $clr-neutral-600;
+}
 .clr-neutral-700 {
   color: $clr-neutral-700;
 }
