--- a/src/css/_icons.scss
+++ b/src/css/_icons.scss
@@ -6,8 +6,8 @@
 
 $flat-icons: "arrow-left-solid", "arrow-right-solid", "arrow-up-solid", "cart", "css", "docker",
   "eleventy", "external", "github", "html", "hygraph", "info", "javascript", "linux", "lock", "node",
-  "python", "scheme", "soundcloud", "star", "star-empty", "telegram", "twitter", "whatsapp",
-  "youtube";
+  "postgres", "python", "sass", "scheme", "soundcloud", "star", "star-empty", "telegram", "twitter",
+  "whatsapp", "youtube";
 
 /*
  *  Color Icons
