--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -90,7 +90,9 @@ $clr-neutral-100: #141414;
 $clr-neutral-200: #1e1e1e;
 $clr-neutral-300: #212121;
 $clr-neutral-400: #3d3d3d;
-$clr-neutral-700: #939393;
+$clr-neutral-500: #5a5a5a;
+$clr-neutral-600: #636363;
+$clr-neutral-700: #7f7f7f;
 $clr-neutral-800: #c9c9c9;
 
 $clr-white: #ffffff;
