--- a/src/css/_flex.scss
+++ b/src/css/_flex.scss
@@ -22,6 +22,11 @@
     @extend .flex;
     justify-content: flex-end;
   }
+  &-justify-between {
+    @extend .flex;
+    justify-content: space-between;
+  }
+
   &-wrap {
     @extend .flex;
     flex-wrap: wrap;
