--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -114,6 +114,10 @@ strong {
   font-weight: 700;
 }
 
+em {
+  font-style: italic;
+}
+
 *:not(nav) > ul:not([class]) {
   padding-left: 1.25rem;
 }
