--- a/src/css/_site-head.scss
+++ b/src/css/_site-head.scss
@@ -57,3 +57,9 @@
 .no-js .site-head__inner {
   row-gap: 1rem;
 }
+
+.js .site-head {
+  @media screen and (max-width: 58.25em) {
+    height: var(--header-min-height);
+  }
+}
