Fix service og image

--- a/src/_pages/[development-service].njk
+++ b/src/_pages/[development-service].njk
@@ -12,7 +12,7 @@ serviceType: development
 eleventyComputed:
   title: "{{ service.title }}"
   description: "{{ service.blurb }}"
-  ogImage: "{{ service.image }}"
+  ogImg: "{{ service.image }}"
   ogAlt: "null"
 ---
 
