Fixed OG Image for shop products

--- a/src/_pages/[product].njk
+++ b/src/_pages/[product].njk
@@ -11,7 +11,7 @@ pageJs: product
 eleventyComputed:
   title: "{{ product.name }}"
   description: "{{ product.description }}"
-  ogImage: "{{ product.images[0] }}"
+  ogImg: "{{ product.images[0] }}"
   ogAlt: "null"
 ---
 
