--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -79,6 +79,7 @@ $breakpoints-down: (
 
 $ff-body: "Open Sans", sans-serif;
 $ff-alternate: "Source Sans 3", sans-serif;
+$ff-mono: "Source Code Pro", monospace;
 
 /*
  * ==============================================
