Updates, and added Firetower

--- a/src/_pages/[portfolio].njk
+++ b/src/_pages/[portfolio].njk
@@ -45,6 +45,15 @@ eleventyComputed:
                         </li>
                     {% endfor %}
                 </ul>
+                <h2 class="fs-600">Lighthouse Scores</h2>
+                <div class="mt firetower-full">
+                    <firetower-scores 
+                        raw-scores="0.99,1,1,1" 
+                        variant="labels" 
+                        rounded 
+                        animated
+                    ></firetower-scores>
+                </div>
             </div>
         </div>
         <div class="container--md flow">
