--- a/src/_pages/home.njk
+++ b/src/_pages/home.njk
@@ -9,6 +9,7 @@ permalink: "/"
             {% image content.home.image,
             content.home.imageAlt,
             loading = "eager",
+            fetchpriority = "high",
             sizes="(max-width: 41.25em) 100vw, (max-width: 63.9375em) 39.25rem, (max-width: 83.25em) 47vw, 38.625rem"
              %}
         </div>
