Services: Added what-people-are-saying-id

--- a/src/_pages/[music-service].njk
+++ b/src/_pages/[music-service].njk
@@ -28,7 +28,7 @@ eleventyComputed:
         {% endfor %}
       </div>
       {% if service.testimonials.length %}
-        <div class="mt-big">
+        <div class="mt-big" id="what-people-are-saying">
           <h2 class="fs-700 ff-alternate">What people are saying</h2>
           <div class="mt-big">
           {% endif %}
