Removed piano teaching

--- a/src/_pages/music.njk
+++ b/src/_pages/music.njk
@@ -161,7 +161,7 @@ description: >-
         <div class="center mt container--md">
             <h3 class="sr-only">Testimonials.</h3>
             <div class="mt">
-                {% set currentTestimonials = content.testimonials | filterByKey('id', ['piano1', 'organ1', 'piano2']) %}
+                {% set currentTestimonials = content.testimonials | filterByKey('id', ['organ3', 'organ1']) %}
                 {% include "partials/testimonials.njk" %}
             </div>
             {# <div class="testimonials mt">
